resolução de bug overflow-x

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,4 +6,5 @@ body {
     font-size: 1.6rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
+    overflow-x: hidden;
 }
